--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.card{
+  width: 18rem;
+  margin: 1rem;
+}
+
+.colums{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
